--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -1,11 +1,17 @@
 .header {
-  height: 80px;
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: center;
   background-color: white;
 }
-
+.container{
+  height: 80px;
+  width: 83%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: white;
+}
 .header-left-content {
   display: flex;
   align-items: center;
@@ -35,6 +41,7 @@
   color: white;
   font-weight: 700;
   font-size: 16px;
+  margin-right: 20px;
 }
 
 @media (max-width: 550px) {
