--- a/src/components/PokeContent/style.css
+++ b/src/components/PokeContent/style.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: row;
   margin-bottom: 30px;
-  max-width: 1200px;
+  max-width: 89%;
   margin: 0 auto;
   flex-wrap: wrap;
   justify-content: center;
@@ -12,7 +12,7 @@
   width: 541px;
   height: 560px;
   background: #ffd029;
-  margin-top: 28px;
+  margin-top: 48px;
   padding: 46px 48px 48px 50px;
   overflow: visible;
 }
@@ -45,9 +45,17 @@
   margin-top: 33px;
 }
 
+.pikachu-image{
+  margin-top: -13%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 @media (max-width: 1119px) {
   .retangle-text-content {
     width: 100%;
     height: 580px;
   }
 }
+
